--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -15,6 +15,8 @@ entries:
       output: pdf
       type: frontmatter
 
+
+
   - title: Overview
     output: web
     folderitems:
@@ -31,7 +33,7 @@ entries:
     - title: Contributing
       url: /contribute/contributing
       output: web
-      
+
     - title: Editing with Google Docs
       url: /contribute/editing-google-docs
       output: web
@@ -43,197 +45,103 @@ entries:
     - title: Pages That Need Content
       url: /contribute/pages_that_need_content
       output: web
-      
+
     - title: Branding
       url: /assets/branding
       output: web
 
-  - title: Social Events
+
+  - title: Makers
     output: web
     folderitems:
 
-    - title: Socializing Events Overview
-      url: /makers_socializing
+    - title: Recruiting Makers
+      url: /#
       output: web
-      type:
+      type: homepage
 
-    - title: Attending Events
-      url: /makers_socializing/attending_events
+    - title: Registering Makers
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Birthday Parties
-      url: /makers_socializing/birthday_parties
+    - title: Approving Makers
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Festivals
-      url: /makers_socializing/festivals
+    - title: Makers Who Sell
+      url: /#
       output: web
-      type:
+      type: homepage
 
-    - title: Field Trips
-      url: /makers_socializing/field_trips
+    - title: Maker Issues
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Game Nights
-      url: /makers_socializing/game_nights
-      output: web
-      type: 
-
-    - title: Maker Conference
-      url: /makers_socializing/maker_conferences
-      output: web
-      type: 
-
-    - title: Meetups
-      url: /makers_socializing/meetups
-      output: web
-      type: 
-
-    - title: Seeing a Show
-      url: /makers_socializing/seeing_a_show
-      output: web
-      type: 
-
-    - title: Socials & Parties
-      url: /makers_socializing/socials_parties
-      output: web
-      type: 
-
-  - title: Makers Hosting Making Events
+  - title: Marketing
     output: web
     folderitems:
 
-    - title: Making Events Overview
-      url: /hosting_making
+    - title: Emails
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Build Competitions
-      url: /hosting_making/build_competitions
+    - title: Social Media
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Community Builds
-      url: /hosting_making/community_builds
+    - title: Photos and Videos
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Disaster Recovery/Support Location
-      url: /hosting_making/disaster_support_location
+    - title: Online Ads
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Fundraisers
-      url: /hosting_making/fundraisers
+    - title: Traditional Media Ads
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Make and Takes
-      url: /hosting_making/make_and_takes
-      output: web
-      type: 
-
-    - title: Make-A-Thon/Hackathon/Game Jam
-      url: /hosting_making/make_a_thon_hackathon
-      output: web
-      type: 
-
-    - title: Maker Art Gallery (Maker Takeover)
-      url: /hosting_making/maker_art_gallery
-      output: web
-      type: 
-
-    - title: Maker Camps
-      url: /hosting_making/maker_camps
-      output: web
-      type: 
-
-    - title: Maker Conferences
-      url: /hosting_making/maker_conferences
-      output: web
-      type: 
-
-    - title: Maker Faires & Maker Fests
-      url: /hosting_making/maker_faires_maker_fests
-      output: web
-      type: 
-
-    - title: Maker Markets/Swap Meets
-      url: /hosting_making/maker_markets_swap_meets
-      output: web
-      type: 
-
-    - title: Makerspace Classes
-      url: /hosting_making/makerspace_classes
-      output: web
-      type: 
-
-    - title: Meeting/Meetup Location
-      url: /hosting_making/meeting_location
-      output: web
-      type: 
-
-    - title: Open House/Open Make
-      url: /hosting_making/open_house_open_make
-      output: web
-      type: 
-
-    - title: Space Improvement
-      url: /hosting_making/space_improvement
-      output: web
-      type: 
-
-    - title: Workshops for Kids
-      url: /hosting_making/workshops_for_kids
-      output: web
-      type: 
-
-  - title: Makers Going Into Community
+  - title: Gate
     output: web
     folderitems:
 
-    - title: Going into Community Overview
-      url: /makers_going_into_community
+    - title: Gate Overview
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Building Competitions
-      url: /makers_going_into_community/building_competitions
+    - title: Maker Check-in
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Community Builds
-      url: /makers_going_into_community/community_builds
+    - title: Volunteer Check-in
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Make and Takes
-      url: /makers_going_into_community/make_and_takes
+    - title: Presale Ticket Check-in
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Maker Camps
-      url: /makers_going_into_community/maker_camps
+    - title: Day-of Ticket Sales
+      url: /#
       output: web
-      type: 
+      type: homepage
 
-    - title: Maker Meetups
-      url: /makers_going_into_community/maker_meetups
+    - title: Credentials
+      url: /#
       output: web
-      type: 
-
-    - title: Power Racing Series Event
-      url: /makers_going_into_community/ppprs_event
-      output: web
-      type: 
-
-    - title: Workshops for Kids
-      url: /makers_going_into_community/workshops_for_kids
-      output: web
-      type: 
+      type: homepage
 
   - title: General Event Topics
     output: web
@@ -242,120 +150,103 @@ entries:
     - title: General Event Topics Overview
       url: /general_event_topics
       output: web
-      type: 
+      type:
 
     - title: Budgets
       url: /general/budgets
       output: web
-      type: 
+      type:
 
     - title: Code of Conduct
       url: /general/code_of_conduct
       output: web
-      type: 
+      type:
 
     - title: Event Documentation
       url: /general/event_documentation
       output: web
-      type: 
+      type:
 
     - title: Event Technology
       url: /general/event_technology
       output: web
-      type: 
+      type:
 
     - title: Insurance
       url: /general/insurance
       output: web
-      type: 
+      type:
 
     - title: Licensing
       url: /general/licensing_agreements
       output: web
-      type: 
+      type:
 
     - title: Locations
       url: /general/locations
       output: web
-      type: 
+      type:
 
     - title: Marketing
       url: /general/marketing
       output: web
-      type: 
+      type:
 
     - title: Participating Entities
       url: /general/participating_entities
       output: web
-      type: 
+      type:
 
     - title: Photo/Video Release
       url: /general/photo_video_release
       output: web
-      type: 
+      type:
 
     - title: Safety / Security
       url: /general/safety_security
       output: web
-      type: 
+      type:
 
     - title: Setup Time / Strike Time
       url: /general/setup_strike_time
       output: web
-      type: 
+      type:
 
     - title: Signage
       url: /general/signage
       output: web
-      type: 
+      type:
 
     - title: Sponsorship
       url: /general/sponsorships
       output: web
-      type: 
+      type:
 
     - title: Tickets
       url: /general/tickets
       output: web
-      type: 
+      type:
 
     - title: Radios
       url: /general/radios
       output: web
-      type: 
+      type:
 
     - title: Unexpected Issues
       url: /general/unexpected_issues
       output: web
-      type: 
+      type:
 
     - title: Volunteers
       url: /general/volunteers
       output: web
-      type: 
+      type:
 
     - title: 21+ Events
       url: /general/21_plus_events
       output: web
-      type: 
-
-  - title: Going Virtual
-    output: web
-    folderitems:
-
-    - title: Things to Think About
-      url: /going_virtual
-      output: web
       type:
 
-  - title: Event Listings
-    output: web
-    folderitems:
-
-    - title: Place Holder for Event Lists
-      url: /event_listing
-      output: web
-      type: 
 
   - title: Issues that Will Come Up
     output: web
@@ -374,9 +265,9 @@ entries:
     - title: Pandemics
       url: /issues_that_can_occur/pandemics
       output: web
-      type: 
+      type:
 
     - title: Shootings
       url: /issues_that_can_occur/shootings
       output: web
-      type: 
+      type:
