--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ github_editme_path: makerfaireorlando/maker-event-playbook/blob/master/
 
 feedback_subject_line: Maker Faire Orlando Playbook
 
-feedback_email: ian.cole@themakereffect.org
+feedback_email: makers@makerfaireorlando.com
 # used as a contact email for the Feedback link in the top navigation bar
 
-feedback_disable: true
+#feedback_disable: true
 # if you uncomment the previous line, the Feedback link gets removed
 
 # feedback_text: "Need help?"
