--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -15,8 +15,6 @@ entries:
       output: pdf
       type: frontmatter
 
-
-
   - title: Overview
     output: web
     folderitems:
@@ -38,37 +36,9 @@ entries:
       url: /contribute/editing-google-docs
       output: web
 
-    - title: Document Your Event
-      url: /contribute/document_your_event
-      output: web
-
     - title: Pages That Need Content
       url: /contribute/pages_that_need_content
       output: web
-
-    - title: Branding
-      url: /assets/branding
-      output: web
-
-  - title: Sponsors and Grants
-    output: web
-    folderitems:
-
-    - title: Sponsors
-      url: /#
-      output: web
-      type: homepage
-
-    - title: Orange County Arts and Cultural Affairs
-      url: /#
-      output: web
-      type: homepage
-
-    - title: Thank You Gifts
-      url: /#
-      output: web
-      type: homepage
-
   - title: Makers
     output: web
     folderitems:
@@ -102,75 +72,90 @@ entries:
       url: /#
       output: web
       type: homepage
-
-  - title: Marketing
+  - title: Volunteers
     output: web
     folderitems:
 
-    - title: Marketing Overview
+    - title: Volunteers Overview
       url: /#
       output: web
       type: homepage
 
-    - title: Emails
+    - title: Recruiting Volunteers
       url: /#
       output: web
       type: homepage
 
-    - title: Social Media
+    - title: Registering Volunteers
       url: /#
       output: web
       type: homepage
 
-    - title: Photos and Videos
+    - title: Service Hours
       url: /#
       output: web
       type: homepage
 
-    - title: Online Ads
+    - title: Volunteer Issues
       url: /#
       output: web
       type: homepage
-
-    - title: Traditional Media Ads
-      url: /#
-      output: web
-      type: homepage
-
-  - title: Gate
+  - title: Sponsors
     output: web
     folderitems:
 
-    - title: Gate Overview
+    - title: Finding Sponsors
       url: /#
       output: web
       type: homepage
 
-    - title: Maker Check-in
+    - title: Past Sponsors
       url: /#
       output: web
       type: homepage
 
-    - title: Volunteer Check-in
+    - title: Orange County Arts and Cultural Affairs
       url: /#
       output: web
       type: homepage
 
-    - title: Presale Ticket Check-in
+    - title: Thank You Gifts
+      url: /#
+      output: web
+      type: homepage
+  - title: Crew
+    output: web
+    folderitems:
+
+    - title: Crew Overview
       url: /#
       output: web
       type: homepage
 
-    - title: Day-of Ticket Sales
+    - title: Recruiting Crew
       url: /#
       output: web
       type: homepage
 
-    - title: Credentials
+    - title: Crew Office
       url: /#
       output: web
       type: homepage
 
+    - title: Crew Food
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Crew Gratitude
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Producer in Residence Program
+      url: /#
+      output: web
+      type: homepage
   - title: Hands-On Activations
     output: web
     folderitems:
@@ -204,21 +189,18 @@ entries:
       url: /#
       output: web
       type: homepage
-
-  - title: Stage
+  - title: Talks & Performances
     output: web
     folderitems:
 
-    - title: Stage Overview
+    - title: Stage
       url: /#
       output: web
       type: homepage
-
     - title: Talks
       url: /#
       output: web
       type: homepage
-
     - title: Performances
       url: /#
       output: web
@@ -228,7 +210,77 @@ entries:
       url: /#
       output: web
       type: homepage
+  - title: Robot Ruckus
+    output: web
+    folderitems:
 
+    - title: Robot Ruckus Overview
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Recruiting Robot Teams
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Arena
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Arena Controls
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Safety
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Static Displays
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Live Stream
+      url: /#
+      output: web
+      type: homepage
+  - title: Power Racing
+    output: web
+    folderitems:
+
+    - title: Power Racing Overview
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Recruiting Racers
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Track and Pits Layout
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Safety
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Jim & Patrick
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Power Needs
+      url: /#
+      output: web
+      type: homepage
   - title: Venue
     output: web
     folderitems:
@@ -262,7 +314,39 @@ entries:
       url: /#
       output: web
       type: homepage
+  - title: Gate
+    output: web
+    folderitems:
 
+    - title: Gate Overview
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Maker Check-in
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Volunteer Check-in
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Presale Ticket Check-in
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Day-of Ticket Sales
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Credentials
+      url: /#
+      output: web
+      type: homepage
   - title: Safety and Security
     output: web
     folderitems:
@@ -301,41 +385,67 @@ entries:
       url: /#
       output: web
       type: homepage
-
-  - title: Crew
+  - title: Systems & Tech
     output: web
     folderitems:
 
-    - title: Crew Overview
+    - title: Wi-Fi
       url: /#
       output: web
       type: homepage
 
-    - title: Recruiting Crew
+    - title: Radios
       url: /#
       output: web
       type: homepage
 
-    - title: Crew Office
+    - title: EventBrite Equipment
       url: /#
       output: web
       type: homepage
 
-    - title: Crew Food
+    - title: Computers
       url: /#
       output: web
       type: homepage
 
-    - title: Crew Gratitude
+    - title: Crew Office Tech
+      url: /#
+      output: web
+      type: homepage
+  - title: Marketing
+    output: web
+    folderitems:
+
+    - title: Marketing Overview
       url: /#
       output: web
       type: homepage
 
-    - title: Producer in Residence Program
+    - title: Emails
       url: /#
       output: web
       type: homepage
 
+    - title: Social Media
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Photos and Videos
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Online Ads
+      url: /#
+      output: web
+      type: homepage
+
+    - title: Traditional Media Ads
+      url: /#
+      output: web
+      type: homepage
   - title: General Event Topics
     output: web
     folderitems:
@@ -439,8 +549,6 @@ entries:
       url: /general/21_plus_events
       output: web
       type:
-
-
   - title: Issues that Will Come Up
     output: web
     folderitems:
