fixing site.url

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ theme: jekyll-theme-time-machine
 
 baseurl:
 
-url: https://www.makereventplaybook.org
+url: https://makerfaireorlando.github.io/playbook
 
 # set timezone
 timezone: America/New_York
