--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -433,7 +433,7 @@ entries:
       type: homepage
 
     - title: Photos and Videos
-      url: /#
+      url: /general_events/media_and_video
       output: web
       type: homepage
 
