Revert "Fixing sidebar for homepage"
This reverts commit c6cdd6f9b85ed9eaeaab72a77e09b47bc78d13a1.

--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -249,7 +249,7 @@ entries:
     folderitems:
 
     - title: Power Racing Overview
-      url: /power-racing/overview
+      url: /#
       output: web
       type: homepage
 
