adding coming soon page

--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -40,32 +40,32 @@ entries:
     folderitems:
 
     - title: Makers Overview
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Recruiting Makers
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Registering Makers
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Approving Makers
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Makers Who Sell
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Maker Issues
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Volunteers
@@ -73,27 +73,27 @@ entries:
     folderitems:
 
     - title: Volunteers Overview
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Recruiting Volunteers
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Registering Volunteers
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Service Hours
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Volunteer Issues
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Sponsors
@@ -101,22 +101,22 @@ entries:
     folderitems:
 
     - title: Finding Sponsors
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Past Sponsors
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Orange County Arts and Cultural Affairs
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Thank You Gifts
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Crew
@@ -124,32 +124,32 @@ entries:
     folderitems:
 
     - title: Crew Overview
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Recruiting Crew
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Crew Office
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Crew Food
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Crew Gratitude
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Producer in Residence Program
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Hands-On Activations
@@ -157,32 +157,32 @@ entries:
     folderitems:
 
     - title: Make-A-Shirt
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Mold-A-Makey
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Learn-To-Solder
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Make-A-Button
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Take-It-Apart
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Nerdy Derby
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Talks & Performances
@@ -190,20 +190,20 @@ entries:
     folderitems:
 
     - title: Stage
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
     - title: Talks
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
     - title: Performances
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Schedule
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Robot Ruckus
@@ -211,37 +211,37 @@ entries:
     folderitems:
 
     - title: Robot Ruckus Overview
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Recruiting Robot Teams
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Arena
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Arena Controls
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Safety
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Static Displays
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Live Stream
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Power Racing
@@ -254,27 +254,27 @@ entries:
       type: homepage
 
     - title: Recruiting Racers
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Track and Pits Layout
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Safety
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Jim & Patrick
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Power Needs
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Venue
@@ -282,32 +282,32 @@ entries:
     folderitems:
 
     - title: Venue Overview
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Tables and Chairs
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Fire Marshall
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Food Service
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Power
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Permits
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Gate
@@ -345,7 +345,7 @@ entries:
       type: homepage
 
     - title: Credentials
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Safety and Security
@@ -353,37 +353,37 @@ entries:
     folderitems:
 
     - title: Safety and Security Overview
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Fire Ants
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Snake in the Crew Office
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Infectious Disease Prevention
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Heat Stroke
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: EMS
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: First Aid Kits
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Systems & Tech
@@ -391,27 +391,27 @@ entries:
     folderitems:
 
     - title: Wi-Fi
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Radios
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: EventBrite Equipment
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Computers
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Crew Office Tech
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
   - title: Marketing
@@ -419,17 +419,17 @@ entries:
     folderitems:
 
     - title: Marketing Overview
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Emails
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Social Media
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
@@ -439,15 +439,15 @@ entries:
 
 
     - title: Online Ads
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
 
     - title: Traditional Media Ads
-      url: /#
+      url: /coming-soon#
       output: web
       type: homepage
-  - title: General Event Topics
+  - title: General Topics (Will be moved into sections)
     output: web
     folderitems:
 
