--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -396,9 +396,8 @@ entries:
       type: homepage
 
     - title: Radios
-      url: /coming-soon#
+      url: /pages/general_events/radios
       output: web
-      type: homepage
 
     - title: EventBrite Equipment
       url: /coming-soon#
