fixed typo in sidebar - stage

--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -204,9 +204,9 @@ entries:
 
 
     - title: Schedule
-      url: /general/stae-schedule
+      url: /general/stage-schedule
       output: web
-  
+
   - title: Robot Ruckus
     output: web
     folderitems:
